--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-streamlit
-altair
+streamlit>=1.18.1
+altair>=5.0.0
+spacy>=3.7.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
 numpy==1.23.5
